feat: finish styling the home page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,139 @@
+/* General */
 * {
     font-family: Roboto;
 }
 
+body {
+    min-height: 100vh;
+    padding-bottom: 100px;
+    position: relative;
+}
+
+header {
+    background-color: #fff;
+    border-bottom: 1px solid #ccc;
+}
+
+.row {
+    margin: 0;
+}
+
+.container-fluid {
+    padding: 0;
+}
+
+.btn-primary {
+    background-color: #f2a340;
+    border: 2px solid #c28008;
+}
+
+.btn-primary:hover {
+    background-color: #c28008;
+    border-color: #c28008;
+}
+
+/* Navigation bar */
+#navbar {
+    justify-content: space-between;
+    padding: 0 20px;
+}
+
+#navbar a {
+    font-size: 14px;
+    color: #757575;
+}
+
+#navbar a:hover {
+    color: #f2a340;
+}
+
 #navbar img {
-    width: 50px;
+    background-color: #fff;
+    width: 40px;
+    padding: 5px 0;
+}
+
+/* Search container */
+#search-container {
+    text-align: center;
+    background-image: url("../img/banner.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 400px;
+    padding: 50px;
+}
+
+#search-container h1 {
+    color: #f2a340;
+    margin-bottom: 30px;
+    font-weight: 900;
+}
+
+#search-container form {
+    width: 50%;
+    margin: 0 auto;
+}
+
+/* Event list */
+#event-container {
+    padding: 50px;
+}
+
+#event-container h2 {
+    margin-bottom: 10px;
+}
+
+#event-container .subtitle {
+    color: #757575;
+    margin-bottom: 30px;
+}
+
+#event-container .card {
+    flex: 1 1 0;
+    max-width: 25%;
+    border-radius: 10px;
+    padding: 0;
+    margin: 5px;
+}
+
+#event-container img {
+    max-height: 150px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+#card-container {
+    display: flex;
+}
+
+.card .card-date {
+    color: #ccc;
+    font-size: 12px;
+}
+
+.card .card-title {
+    color: #212121;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.card .card-participants {
+    color: #757575;
+    font-size: 14px;
+}
+
+/* Footer */
+footer {
+    color: #fff;
+    text-align: center;
+    background-color: #353e48;
+    width: 100%;
+    padding: 30px;
+    position: absolute;
+    bottom: 0;
+}
+
+footer p {
+    margin-bottom: 0;
 }
