--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,6 +32,16 @@ header {
     border-color: #c28008;
 }
 
+.msg {
+    color: #155724;
+    text-align: center;
+    background-color: #d4edda;
+    border: 1px solid #c3e6cb;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 0;
+}
+
 /* Navigation bar */
 #navbar {
     justify-content: space-between;
