feat and fix: load event images (add a new column in events table) and fix event layout on home page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -99,11 +99,11 @@ header {
 }
 
 #event-container .card {
-    flex: 1 1 0;
+    flex: 1 1 24%;
     max-width: 25%;
     border-radius: 10px;
     padding: 0;
-    margin: 5px;
+    margin: 0.5%;
 }
 
 #event-container img {
