--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -203,6 +203,16 @@ header {
     margin-top: 30px;
 }
 
+/* Dashboard */
+.dashboard-title-container {
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+.dashboard-event-container th {
+    width: 25%;
+}
+
 /* Footer */
 footer {
     color: #fff;
