--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -213,6 +213,10 @@ header {
     width: 25%;
 }
 
+.dashboard-event-container form {
+    display: inline-block;
+}
+
 /* Footer */
 footer {
     color: #fff;
