feat: create remove participation button on dashboard and check if users already participate in events

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -42,6 +42,15 @@ header {
     margin-bottom: 0;
 }
 
+#info-container .already-joined-msg {
+    color: #004085;
+    background-color: #cce5ff;
+    width: 300px;
+    margin: 15px 0;
+    padding: 10px;
+    border: 1px solid #b8daff;
+}
+
 /* Navigation bar */
 #navbar {
     justify-content: space-between;
